GNOME Bugzilla – Bug 585598
If video is too large, resize to 1/2 size
Last modified: 2010-04-27 16:56:23 UTC
Please describe the problem: Originally sent to Launchpad: https://bugs.launchpad.net/ubuntu/+source/totem/+bug/351025 I'm using totem 2.26 on jaunty. If you enable the option to automatically resize the window when a new video is loaded, but the video is so large that it doesn't fit the screen, nothing happens. I think the window should be resized to 1/2 of the original size instead, since this would at least show the correct proportions and avoid black borders. Steps to reproduce: 1. activate the "auto resize" option 2. open a video with a greater resolution than that of your screen Actual results: Totem's window will fail to resize, and will keep the previous size and aspect (including two black borders). Expected results: It should resize to 1/2 the original video's size instead: at least the window would have the right proportions then. Does this happen every time? Yes. Other information:
Created attachment 136467 [details] Screenshot: 1280x720 video opened on a 1280x800 screen
Created attachment 136468 [details] Screenshot: same video, shown at 1/2 the original size.
Fixed in 961bb8f4e9f3e953f767b8dd2db8bb6d474bfeef in master