Make the auto resize half-scale if available

Or 2x the size if it fits on the screen.

https://bugzilla.gnome.org/show_bug.cgi?id=585598